--- a/XPathParser/project.json
+++ b/XPathParser/project.json
@@ -26,8 +26,12 @@
     "netstandard1.3": {
       "imports": "dnxcore50",
       "dependencies": {
-    	"NETStandard.Library": "1.5.0-rc2-24027",
-	"System.Xml.XPath": "4.0.1-rc2-24027"
+        "System.Xml.XPath": "4.0.1",
+        "System.Collections": "4.0.11",
+        "System.Text.RegularExpressions": "4.1.0",
+        "System.Diagnostics.Debug": "4.0.11",
+        "System.Globalization": "4.0.11",
+        "System.Runtime.Extensions": "4.1.0"
       }
     },
     "net20": {
@@ -37,7 +41,7 @@
     },
     "net30": {
       "frameworkAssemblies": {
-        "System.Xml": "3.0.0.0"
+        "System.Xml": "2.0.0.0"
       }
     },
     "net40": {
@@ -50,8 +54,5 @@
         "System.Xml": "4.0.0.0"
       }
     }
-  },
-  "runtimes": {
-    "win7-x64": { }
   }
 }
